--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <br>
 
         <label for="nom">Votre nom ?</label>
-        <input type="text" name="nom" id="nom" required> 
+        <input type="nom" name="nom" id="nom" required> 
         <br>
 
         <fieldset>
@@ -26,27 +26,36 @@
         <br>
 
         <label for="adresse email">Votre adresse email ?</label>
-        <input type="text" name="adresse email" id="adresse email" required pattern="[A-Za-z0-9](([_\.\-]?[a-zA-Z0-9]+)*)@([A-Za-z0-9]+)(([_\.\-]?[a-zA-Z0-9]+)*)\.([A-Za-z]{2,})" required> 
+        <input type="text" name="adresse email" id="adresse email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required> 
         <br>
 
         <label for="adresse postale">Votre adresse postale?</label>
-        <input type="text" name="adresse postale" id="adresse postale" required> 
+        <input type="adresse postale" name="adresse postale" id="adresse postale" required> 
         <br>
 
         <label for="code postale">Votre code postale?</label>
-        <input type="text" name="code postale" id="code postale" required pattern="([A-Z]+[A-Z]?\-)?[0-9]{1,2} ?[0-9]{3}" required> 
+        <input type="code postale" name="code postale" id="code postale" required pattern="[0-9]{5}" required> 
         <br>
 
         <label for="Ville">Votre ville ?</label>
-        <input type="text" name="Ville" id="Ville" required> 
+        <input type="Ville" name="Ville" id="Ville" required> 
         <br>
 
-        <label for="métier">Le métier que vous exercé ?</label>
-        <input type="text" name="métier" id="métier" required> 
+            <fieldset>
+                <legend>Le métier que vous exercé ?</legend>
+                    <label><input type="radio" id="radio" name="radio">Développeur web</label>
+                    <label><input type="radio" id="radio" name="radio">Dermatologue</label>
+                    <label><input type="radio" id="radio" name="radio">Dentiste</label>
+                    </fieldset>
         <br>
 
         <label for="nationalité">Votre nationalité ?</label>
-        <input type="text" name="nationalité" id="nationalité" required> 
+        <select name="nationalite" id="nationalite">
+            <option value="fr">Française</option>
+            <option value="ar">Arabe</option>
+            <option value="po">Portugaise</option>
+            <option value="es">Espagnol</option>
+        </select>
         <br>
 
         <label for="date de naissance">Votre date de naissance ?</label>
@@ -58,11 +67,11 @@
         <br>
 
         <label for="sécurité social">Votre numéro de sécurité social ?</label>
-        <input type="text" name="sécurité social" id="sécurité social" required pattern="[12][ \.\-]?[0-9]{2}[ \.\-]?(0[1-9]|[1][0-2])[ \.\-]?([0-9]{2}|2A|2B)[ \.\-]?[0-9]{3}[ \.\-]?[0-9]{3}[ \.\-]?[0-9]{2}" required> 
+        <input type="text" name="sécurité social" id="sécurité social" required pattern="[0-9]{13}" required> 
         <br>
 
         <label for="Numéro du passeport">Votre numéro du passeport ?</label>
-        <input type="text" name="Numéro du passeport" id="Numéro du passeport" required> 
+        <input type="text" name="Numéro du passeport" id="Numéro du passeport" required pattern="[0-9]{2}[A-Z]{2}[0-9]{5}"> 
         <br>
 
         <label for="Date de délivrance du passeport">Votre date de délivrance du passeport ?</label>
