--- a/index.html
+++ b/index.html
@@ -6,81 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire brief1</title>
 </head>
-<body>
-    <form action="Informations" method="get" class="form-example">
 
+<body>
+    <form>
         <label for="prénom">Votre prénom ?</label>
         <input type="text" name="prénom" id="prénom" required> 
         <br>
 
         <label for="nom">Votre nom ?</label>
-        <input type="nom" name="nom" id="nom" required> 
+        <input type="text" name="nom" id="nom" required> 
         <br>
 
         <fieldset>
         <legend>Votre sexe ?</legend>
-            <label><input type="radio" id="Oui" name="radio">Femme</label>
-            <label><input type="radio" id="Non" name="radio">Homme</label>
-            <label><input type="radio" id="Non" name="radio">Autres</label>
+            <label><input type="radio" id="Femme" name="radio" required>Femme</label> 
+            <label><input type="radio" id="Homme" name="radio" required>Homme</label>
+            <label><input type="radio" id="Autres" name="radio" required>Autres</label>
             </fieldset>
         <br>
 
-        <label for="adresse email">Votre adresse email ?</label>
-        <input type="text" name="adresse email" id="adresse email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required> 
+        <label>Votre adresse email ?</label>
+        <input type="email" name="adresse email" id="adresse-email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"> 
         <br>
 
-        <label for="adresse postale">Votre adresse postale?</label>
-        <input type="adresse postale" name="adresse postale" id="adresse postale" required> 
+        <label>Votre adresse postale?</label>
+        <input type="text" name="adresse postale" id="adresse-postale" required> 
         <br>
 
-        <label for="code postale">Votre code postale?</label>
-        <input type="code postale" name="code postale" id="code postale" required pattern="[0-9]{5}" required> 
+        <label>Votre code postale?</label>
+        <input type="text" name="code postale" id="code-postale" maxlength="5" required pattern="[0-9]{5}"> 
         <br>
 
-        <label for="Ville">Votre ville ?</label>
-        <input type="Ville" name="Ville" id="Ville" required> 
+        <label> Votre ville ?</label>
+        <input type="text" name="Ville" id="Ville" required> 
         <br>
 
             <fieldset>
                 <legend>Le métier que vous exercé ?</legend>
-                    <label><input type="radio" id="radio" name="radio">Développeur web</label>
-                    <label><input type="radio" id="radio" name="radio">Dermatologue</label>
-                    <label><input type="radio" id="radio" name="radio">Dentiste</label>
+                    <label><input type="radio" id="métier1" name="radio" required>Développeur web</label>
+                    <label><input type="radio" id="métier2" name="radio" required>Dermatologue</label>
+                    <label><input type="radio" id="métier3" name="radio" required>Dentiste</label>
                     </fieldset>
         <br>
 
-        <label for="nationalité">Votre nationalité ?</label>
-        <select name="nationalite" id="nationalite">
+        <label>Votre nationalité ?</label>
+        <select name="nationalite" id="nationalite" required>
             <option value="fr">Française</option>
             <option value="ar">Arabe</option>
             <option value="po">Portugaise</option>
             <option value="es">Espagnol</option>
         </select>
+        <br />
+
+        <label>Votre date de naissance ?</label>
+        <input type="date" id="naissance" name="trip-start" value="1924-07-22" min="2022-01-01" max="2085-12-31" required>
         <br>
 
-        <label for="date de naissance">Votre date de naissance ?</label>
-        <input id="week" type="week" name="week" value="2022-W01" required>
+        <label>Votre pays de naissance ?</label>
+        <input type="text" name="Pays de naissance" id="Pays-de-naissance" required> 
         <br>
 
-        <label for="Pays de naissance">Votre pays de naissance ?</label>
-        <input type="text" name="Pays de naissance" id="Pays de naissance" required> 
+        <label>Votre numéro de sécurité social ?</label>
+        <input type="text" name="sécurité social" id="sécurité-social" maxlength="13" required pattern="[0-9]{13}"> 
         <br>
 
-        <label for="sécurité social">Votre numéro de sécurité social ?</label>
-        <input type="text" name="sécurité social" id="sécurité social" required pattern="[0-9]{13}" required> 
+        <label>Votre numéro du passeport ?</label>
+        <input type="text" name="Numéro du passeport" id="Numéro-du-passeport" required pattern="[0-9]{2}[A-Z]{2}[0-9]{5}"> 
         <br>
 
-        <label for="Numéro du passeport">Votre numéro du passeport ?</label>
-        <input type="text" name="Numéro du passeport" id="Numéro du passeport" required pattern="[0-9]{2}[A-Z]{2}[0-9]{5}"> 
+        <label>Votre date de délivrance du passeport ?</label>
+        <input type="date" id="délivrance" name="trip-start" value="1924-07-22" min="2022-01-01" max="2085-12-31" required>
         <br>
 
-        <label for="Date de délivrance du passeport">Votre date de délivrance du passeport ?</label>
-        <input id="week" type="week" name="week" value="2022-W01" required>
+        <label>Votre date de validité du passeport?</label>
+        <input type="date" id="validité" name="trip-start" value="1924-07-22" min="2022-01-01" max="2085-12-31" required>
         <br>
-
-        <label for="Date de validité du passeport">Votre date de validité du passeport?</label>
-        <input id="week" type="week" name="week" value="2022-W01" required>
-        <br>
+        <input type="submit" value="Envoyer le formulaire">
+    </form>
     
 </body>
+
 </html>
